fixed clipping

--- a/FE/src/app/components/navigation/header/header.component.scss
+++ b/FE/src/app/components/navigation/header/header.component.scss
@@ -15,6 +15,10 @@ a:hover, a:active{
 
 mat-toolbar{
     border-radius: 3px;
+    
+}
+.main-toolbar {
+    
 }
 
 @media(max-width: 850px){
@@ -39,13 +43,13 @@ mat-toolbar{
 
 @media screen and (min-width: 850px) {
     .spacer {
-        flex: 0.45 0.45 auto;
+        flex: 0.475 0.475 auto;
     }
     
   }
 .nav-item {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
     border-right: solid white;
